# fitness-coach

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  MEMORY_INTEGRATION.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260129_0001_01_initial_fitness_models.py  20260129_1335_2c636582abfa_add_pgvector_rag_tables.py  20260616_1930_d248b6f345e6_add_profile_weight_injuries_blood_markers.py
backend/app/: config.py  db.py  main.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/api/fitness/: __init__.py  chat.py  plans.py  workouts.py
backend/app/models/: README.md  __init__.py
backend/app/models/fitness/: __init__.py  chat_message.py  profile.py  workout_log.py  workout_plan.py
backend/app/providers/: __init__.py  factory.py  protocols.py
backend/app/providers/ai/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
backend/app/providers/embedding/: __init__.py  ollama.py  openai.py
backend/app/providers/graph/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  neo4j_graph.py  networkx_graph.py  protocols.py
backend/app/providers/memory/: README.md  __init__.py  examples.py  factory.py  langchain.py  protocols.py  simple.py  test_memory.py
backend/app/providers/rag/: __init__.py  pgvector.py
backend/app/services/: __init__.py  fitness_agent.py  plan_navigator.py  rag_indexer.py  streaming.py  tools.py
backend/app/services/tools/: __init__.py  health.py  plans.py  workouts.py
backend/data/: fitness_graph.json
backend/examples/: graph_usage.py
backend/requirements/: all.txt  base.txt  cloud.txt  ollama.txt
backend/tests/providers/: test_graph.py
docker/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FILES.md  INDEX.md  Makefile  README.md  SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  healthcheck.sh  init-db.sh  start.sh  verify.sh
docs/: README.md
frontend/: .env.local.example  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json  sw.js
frontend/public/icons/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/plans/: page.tsx
frontend/src/app/plans/[id]/: page.tsx
frontend/src/app/plans/[id]/day/[dayId]/: page.tsx
frontend/src/app/progress/: page.tsx
frontend/src/app/workout/: page.tsx
frontend/src/components/: BottomNav.tsx  Breadcrumbs.tsx  ExerciseCard.tsx  ToolCallBlock.tsx  TypingIndicator.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: workout.ts
