[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-coach"
version = "1.0.0"
description = "Open-source AI fitness coach with multi-provider support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fitness Coach Contributors"}
]
keywords = ["fitness", "ai", "coach", "workout", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # HTTP client
    "httpx>=0.28.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Knowledge graph (lightweight, included by default)
    "networkx>=3.4",

    # Utilities
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
# Cloud AI providers
anthropic = [
    "anthropic>=0.40.0",
]

openai = [
    "openai>=1.50.0",
]

# Vector search for semantic memory
pgvector = [
    "pgvector>=0.3.0",
]

# Knowledge graph (production-grade)
neo4j = [
    "neo4j>=5.26.0",
]

# LangChain for enhanced memory
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
]

# Bundles
cloud = [
    "fitness-coach[anthropic,openai,pgvector]",
]

local = [
    # Ollama doesn't need extra Python dependencies
    # Just install Ollama binary and pull models
]

all = [
    "fitness-coach[anthropic,openai,pgvector,neo4j,langchain]",
]

# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",  # For testing
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]

[project.urls]
Homepage = "https://github.com/yourusername/fitness-coach"
Documentation = "https://github.com/yourusername/fitness-coach#readme"
Repository = "https://github.com/yourusername/fitness-coach"
Issues = "https://github.com/yourusername/fitness-coach/issues"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
